# sample-python-code-interview

./: .gitignore
algo/: algo.py
sample-fastapi/: README.md  main.py  pyproject.toml
